
class DatabaseConfig:
    def __init__(self) -> None:
        super().__init__()
        self.url = ""
        self.username = ""
        self.password = ""